<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionAdherant">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="-32dp">
        <TextView
            android:id="@+id/SignInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/licenceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licence_label" />

        <EditText
            android:id="@+id/licenseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/dateCertificatLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_certificate_date" />

        <EditText
            android:id="@+id/dateCertificatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/forfaitLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forfait_label" />

        <EditText
            android:id="@+id/forfaitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        <TextView
            android:id="@+id/niveauLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_label" />

        <EditText
            android:id="@+id/niveauText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/nomLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname_label" />

        <EditText
            android:id="@+id/nomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/prenomLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname_label" />

        <EditText
            android:id="@+id/prenomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address_label" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBoxDirecteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Directeur" />

        <CheckBox
            android:id="@+id/checkBoxSecretaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Secretaire" />

        <CheckBox
            android:id="@+id/checkBoxPilote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pilote" />

        <CheckBox
            android:id="@+id/checkBoxSecurite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sécurité surface" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/boutonValider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Valider" />
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>